{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 27,
  "lineage": "254571bf-2a45-9b4f-e64f-7150da92f94e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "rkkumar-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/networkInterfaces/rg2-nic",
            "internal_domain_name_suffix": "cnl34wr1wlbefjv0f3h2unogre.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/publicIPAddresses/rg2-ip",
                "subnet_id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-virtual-network/subnets/rg2-subnet1"
              }
            ],
            "location": "centralindia",
            "mac_address": "7C-1E-52-0E-C8-71",
            "name": "rg2-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "rg2",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Compute/virtualMachines/rg2-vm"
          },
          "dependencies": [
            "azurerm_public_ip.rkkumar-ip",
            "azurerm_resource_group.rkkumar",
            "azurerm_subnet.rkkumar-sn",
            "azurerm_virtual_network.rkkumar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "rkkumar",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/rg2-security-group",
            "location": "centralindia",
            "name": "rg2-security-group",
            "resource_group_name": "rg2",
            "security_rule": [],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rkkumar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "rkkumar-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/rg2-nsg",
            "location": "centralindia",
            "name": "rg2-nsg",
            "resource_group_name": "rg2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rkkumar-nsg-rule1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rkkumar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rkkumar-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/rg2-nsg/securityRules/rkkumar-nsg-rule1",
            "name": "rkkumar-nsg-rule1",
            "network_security_group_name": "rg2-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg2",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.rkkumar-nsg",
            "azurerm_resource_group.rkkumar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "rkkumar-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/publicIPAddresses/rg2-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.71.29.229",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "rg2-ip",
            "resource_group_name": "rg2",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rkkumar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "rkkumar-sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-virtual-network/subnets/rg2-subnet1",
            "name": "rg2-subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg2",
            "virtual_network_name": "rg2-virtual-network"
          },
          "dependencies": [
            "azurerm_resource_group.rkkumar",
            "azurerm_virtual_network.rkkumar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "rkkumar-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-virtual-network/subnets/rg2-subnet1",
            "network_security_group_id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/rg2-nsg",
            "subnet_id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-virtual-network/subnets/rg2-subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.rkkumar-nsg",
            "azurerm_resource_group.rkkumar",
            "azurerm_subnet.rkkumar-sn",
            "azurerm_virtual_network.rkkumar"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "rkkumar",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5adf5713-b23b-42c2-a6ba-2f4fca35c68c",
            "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-virtual-network",
            "location": "centralindia",
            "name": "rg2-virtual-network",
            "resource_group_name": "rg2",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/virtualNetworks/rg2-virtual-network/subnets/rg2-subnet1",
                "name": "rg2-subnet1",
                "security_group": "/subscriptions/73854de3-675c-4aa5-a3ca-56b28583a06e/resourceGroups/rg2/providers/Microsoft.Network/networkSecurityGroups/rg2-nsg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rkkumar"
          ]
        }
      ]
    }
  ]
}